Criação do painel e tela de criar site

--- a/ace/resources/sass/app.scss
+++ b/ace/resources/sass/app.scss
@@ -4,5 +4,8 @@
 // Variables
 @import 'variables';
 
+// Importa as variáveis personalizadas
+@import 'custom';
+
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
